--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" type="text/css" href="interface/css/subPage.css" />
     <link rel="stylesheet" type="text/css" href="interface/css/color.css" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="interface/js/func.js" DEFER></script>
     <script src="interface/js/script.js" DEFER></script>
 </head>
 <body class="col-div">
   <h1>VERITUS OF THE CURSED MIRROR</h1>
+
+  <!--          main screens          -->
   <div id="main-screen" class="screen current-screen">
     <div class="mirrors row-div">
       <div class="mirror-obj item" id="M_queens-personal-quarters">
@@ -89,17 +92,18 @@
         <img src="assets/ode.png" class="book-icon item" data-booktitle="ode-to-the-living-dead" />
       </div>
       <div id="book-information" class="information-panel">
-        <h3 id="book-title-text"></h3>
+        <h2 id="book-title-text"></h2>
         <div id="book-synopsis-text"></div>
         <div id="book-body-text"></div>
       </div>
+      <!-- right sidebar -->
       <div class="right-sidebar information-panel col-div">
         <div class="sidebar-notepad col-div">
           <div class="row-div">
             <img src="assets/paper.png" class="small-icon" />
             <p>YOUR SMALL NOTEPAD</p>
           </div>
-          <textarea class="notepad-text" type="text"></textarea>
+          <textarea class="notepad-text" placeholder="click to type"></textarea>
         </div>
         <div class="tracker-wrapper row-div">
           <div class="tracker-labels trackers col-div">
@@ -129,13 +133,36 @@
         <img src="assets/cassette3.png" class="recording-icon item" data-recordingnum="3" />
       </div>
       <div id="recording-information" class="information-panel">
-        <h3 id="recording-title-text"></h3>
+        <h2 id="recording-title-text"></h2>
+        <div id="recording-length-text"></div>
         <div id="recording-data-text"></div>
       </div>
+      <!-- right sidebar -->
+      <div class="right-sidebar information-panel col-div">
+        <div class="sidebar-notepad col-div">
+          <div class="row-div">
+            <img src="assets/paper.png" class="small-icon" />
+            <p>YOUR SMALL NOTEPAD</p>
+          </div>
+          <textarea class="notepad-text" placeholder="click to type"></textarea>
+        </div>
+        <div class="tracker-wrapper row-div">
+          <div class="tracker-labels trackers col-div">
+            <p class="T_time">TIME : </p>
+            <p class="T_energy">ENERGY : </p>
+          </div>
+          <div class="tracker-values trackers col-div">
+            <p class="T_time-value"></p>
+            <p class="T_energy-value"></p>
+          </div>
+        </div>
+      </div>
+    </div>
     </div>
   </div>
 
   <!--        global button           -->
+  <br />
   <div id="return-to-main-page"></div>
 </body>
 </html>
