tiny additions on notes... need to figure out notepad implementation

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
 
   <div id="notepad-screen" class="screen">
     <h2>A SMALL NOTEPAD</h2>
-    <div class="notepad-text"></div>
+    <div class="screen-wrapper">
+      <textarea class="notepad-text" placeholder="click to type"></textarea>
+    </div>
   </div>
 
   <div id="recordings-screen" class="screen">
